--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,8 @@ ntplib==0.4.0
 httpx==0.25.2
 apscheduler==3.11.2
 uvicorn[standard]==0.40.0
+
+# Testing
+pytest==9.0.2
+pytest-httpserver==1.1.3
+pytest-asyncio==1.3.0
